--- a/.github/workflows/publish-rust-crate.yml
+++ b/.github/workflows/publish-rust-crate.yml
@@ -17,9 +17,9 @@ jobs:
     needs: [get-version]
     steps:
       - uses: actions/checkout@v4
-      - uses: actions-rs/toolchain@v1
+      - uses: dtolnay/rust-toolchain@stable
         with:
-          override: true
+          toolchain: stable
           components: rustfmt, clippy
       - name: Ensure version of crate matches release
         id: get-cargo-version
@@ -37,9 +37,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Install latest stable toolchain
-        uses: actions-rs/toolchain@v1
+        uses: dtolnay/rust-toolchain@stable
         with:
-          override: true
+          toolchain: stable
           components: rustfmt, clippy
       - uses: davidB/rust-cargo-make@10579dcff82285736fad5291533b52d3c93d6b3b
       - name: Run CI Tasks with backtrace
@@ -50,9 +50,9 @@ jobs:
     needs: [get-version, assert-matching-version, run-ci-checks]
     steps:
       - uses: actions/checkout@v4
-      - uses: actions-rs/toolchain@v1
+      - uses: dtolnay/rust-toolchain@stable
         with:
-          override: true
+          toolchain: stable
           components: rustfmt, clippy
       - uses: davidB/rust-cargo-make@10579dcff82285736fad5291533b52d3c93d6b3b
       - name: Package and Publish Cargo to registry
@@ -64,9 +64,9 @@ jobs:
     needs: [get-version, assert-matching-version, dry-run-publish]
     steps:
       - uses: actions/checkout@v4
-      - uses: actions-rs/toolchain@v1
+      - uses: dtolnay/rust-toolchain@stable
         with:
-          override: true
+          toolchain: stable
           components: rustfmt, clippy
       - uses: davidB/rust-cargo-make@10579dcff82285736fad5291533b52d3c93d6b3b
       - name: Package and Publish Cargo to registry
