--- a/.github/workflows/lint-and-test.yml
+++ b/.github/workflows/lint-and-test.yml
@@ -50,6 +50,9 @@ jobs:
           check-latest: true
           cache: yarn
           cache-dependency-path: ./node-attestation-bindings/yarn.lock
+      - name: Use system yarn of version 3
+        run: |
+          npm install -g yarn@3.3.0
       - name: Setup rust toolchain
         uses: dtolnay/rust-toolchain@stable
         with:
