--- a/attestation-doc-validation/Cargo.toml
+++ b/attestation-doc-validation/Cargo.toml
@@ -24,10 +24,10 @@ serde = { version = "1.0.180", features = ["derive"] }
 serde_with = "2.2"
 webpki = { version = "0.22", features = ["alloc"] }
 x509-parser = "0.14.0"
-der = { version = "^0.7", features = ["alloc","derive","oid"] }
-p256 = { version = "^0.13", features = ["ecdsa"] }
-p384 = { version = "^0.13", features = ["ecdsa","arithmetic"] }
-ecdsa = { version = "^0.16", features = ["verifying"] }
+der = { version = "=0.7", features = ["alloc","derive","oid"] }
+p256 = { version = "=0.13", features = ["ecdsa"] }
+p384 = { version = "=0.13", features = ["ecdsa","arithmetic"] }
+ecdsa = { version = "=0.16", features = ["verifying"] }
 sha2 = "^0.10"
 aes = "^0.8"
 aes-gcm = "^0.10"
