Comment out node build

--- a/.github/workflows/build-and-deploy-node-bindings.yml
+++ b/.github/workflows/build-and-deploy-node-bindings.yml
@@ -16,7 +16,7 @@ on:
   #     - '**/*.gitignore'
   #     - .editorconfig
   #     - docs/**
-  pull_request: null
+  # pull_request: null
 jobs:
   build:
     strategy:
