--- a/.github/workflows/build-and-deploy-node-bindings.yml
+++ b/.github/workflows/build-and-deploy-node-bindings.yml
@@ -38,12 +38,12 @@ jobs:
             target: x86_64-unknown-linux-gnu
             docker: ghcr.io/napi-rs/napi-rs/nodejs-rust:stable-2023-09-17-x64
             build:
-              set -e && CARGO_BUILD_FLAGS=--locked yarn build --target x86_64-unknown-linux-gnu && strip
+              set -e && yarn build --target x86_64-unknown-linux-gnu && strip
               *.node
           - host: ubuntu-latest
             target: x86_64-unknown-linux-musl
             docker: ghcr.io/napi-rs/napi-rs/nodejs-rust:stable-2023-09-17-alpine
-            build: set -e && apk add perl openssl && CARGO_BUILD_FLAGS=--locked yarn build && strip *.node
+            build: set -e && apk add perl openssl && yarn build && strip *.node
           - host: macos-latest
             target: aarch64-apple-darwin
             build: |
@@ -53,7 +53,7 @@ jobs:
             target: aarch64-unknown-linux-gnu
             docker: ghcr.io/napi-rs/napi-rs/nodejs-rust:stable-2023-09-17-aarch64
             build:
-              set -e && echo -e '#!/bin/sh\nexec /usr/bin/cargo "$@" --locked' > /usr/local/bin/cargo && CARGO_BUILD_FLAGS=--locked yarn build --target aarch64-unknown-linux-gnu &&
+              set -e && yarn build --target aarch64-unknown-linux-gnu &&
               aarch64-unknown-linux-gnu-strip *.node
           - host: ubuntu-latest
             target: armv7-unknown-linux-gnueabihf
