Add public config for public

--- a/wasm-attestation-bindings/package.json
+++ b/wasm-attestation-bindings/package.json
@@ -24,6 +24,9 @@
       "evervault"
     ],
     "author": "Evervault",
-    "license": "MIT"
+    "license": "MIT",
+    "publishConfig": {
+      "access": "public"
+    }
   }
   
